# t-wgpu_youtube_practical_programming_with_dr_xu

memo/: memo_001.md
projects/wgpu03/: Cargo.toml
projects/wgpu03/src/: main.rs  shader.wgsl
