[package]
name = "wgpu03"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
bytemuck = { version = "1.21.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.6"
futures = "0.3.31"
gfx-hal = "0.9.0"
image = "0.25.5"
log = "0.4.26"
pollster = "0.4.0"
rand = "0.9.0"
wgpu = "24.0.1"
winit = "0.30.9"
